crates/protocol/tests/snapshots/golden__hello.snap
---
source: crates/protocol/tests/golden.rs
expression: pretty
---
{
  "type": "hello",
  "protocol_version": 1,
  "layout": {
    "step_s": 1.0,
    "cell_length_m": 7.5,
    "approaches": {
      "north": {
        "length_m": 30.0,
        "lanes": [
          {
            "index": 0,
            "len_cells": 4,
            "movements": [
              "left"
            ]
          },
          {
            "index": 1,
            "len_cells": 4,
            "movements": [
              "through",
              "right"
            ]
          }
        ]
      },
      "east": {
        "length_m": 30.0,
        "lanes": [
          {
            "index": 0,
            "len_cells": 4,
            "movements": [
              "left",
              "through",
              "right"
            ]
          }
        ]
      },
      "south": {
        "length_m": 30.0,
        "lanes": [
          {
            "index": 0,
            "len_cells": 4,
            "movements": [
              "left"
            ]
          },
          {
            "index": 1,
            "len_cells": 4,
            "movements": [
              "through",
              "right"
            ]
          }
        ]
      },
      "west": {
        "length_m": 30.0,
        "lanes": [
          {
            "index": 0,
            "len_cells": 4,
            "movements": [
              "left",
              "through",
              "right"
            ]
          }
        ]
      }
    },
    "signal": {
      "yellow_s": 3.0,
      "all_red_s": 2.0,
      "min_green_s": 5.0,
      "max_red_s": 30.0,
      "phases": [
        {
          "name": "ns",
          "green": [
            {
              "approach": "north",
              "movement": "left"
            },
            {
              "approach": "north",
              "movement": "through"
            },
            {
              "approach": "north",
              "movement": "right"
            },
            {
              "approach": "south",
              "movement": "left"
            },
            {
              "approach": "south",
              "movement": "through"
            },
            {
              "approach": "south",
              "movement": "right"
            }
          ]
        },
        {
          "name": "ew",
          "green": [
            {
              "approach": "east",
              "movement": "left"
            },
            {
              "approach": "east",
              "movement": "through"
            },
            {
              "approach": "east",
              "movement": "right"
            },
            {
              "approach": "west",
              "movement": "left"
            },
            {
              "approach": "west",
              "movement": "through"
            },
            {
              "approach": "west",
              "movement": "right"
            }
          ]
        }
      ]
    }
  }
}
